Fix border color in dark mode

--- a/addons/hide-backpack/border.css
+++ b/addons/hide-backpack/border.css
@@ -7,7 +7,7 @@ body:not(.sa-backpack-open) [class*="asset-panel_wrapper_"] {
 
 .sa-backpack-open [class*="backpack_backpack-list_"] {
   margin-top: 0.5rem;
-  border-top: 1px solid rgba(0, 0, 0, 0.15);
+  border-top: 1px solid var(--editorDarkMode-border, rgba(0, 0, 0, 0.15));
 }
 
 .sa-backpack-open [dir="ltr"] [class*="backpack_backpack-list_"] {
